<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_app_to_upload_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dailog_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/camera"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/ic_camera"
            android:drawableStart="@drawable/ic_camera" />

        <Button
            android:id="@+id/dailog_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_image"
            android:text="@string/gallery"
            android:padding="5dp"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/ic_image" />
    </LinearLayout>
</LinearLayout>